# milvus-rs

./: Cargo.toml  README.md  build.rs
examples/: list_collections.rs
src/: client.rs  collection.rs  config.rs  error.rs  lib.rs  schema.rs  utils.rs
src/proto/: milvus.proto.common.rs  milvus.proto.milvus.rs  milvus.proto.schema.rs  mod.rs
