[package]
name = "milvus"
version = "0.1.2"
edition = "2021"
authors = ["Andrey Tkachenko <andrey@aidev.ru>"]
repository = "https://github.com/andreytkachenko/milvus-rs.git"
keywords = ["milvus", "database", "vector", "vector-database", "search"]
categories = ["database"]
description = "Milvus SDK library"
license = "MIT OR Apache-2.0"
exclude = [".gitignore", ".cargo/config", ".github/**", "codecov.yml"]
build = "build.rs"

[dependencies]
prost = "0.10"
thiserror = "1.0.31"
tokio = "1"
tonic = "0.7"

[build-dependencies]
tonic-build = "0.7"

[dev-dependencies]
anyhow = "1.0.57"
tokio = { version = "1", features = ["full"] }
